[package]
name = "cryptorun"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun" }
abi_stable = "0.11.1"
serde = "1.0.166"
serde_json = "1.0.100"
ron = "0.8.0"
reqwest = { version = "0.11.13", default-features = false, features = ["blocking", "json", "rustls-tls"] }